# document_embedding_analysis

./: .gitattributes  .gitignore  README.md  config.py  demo_wikipedia_progression.py  demo_wikipedia_progression_output.md  main.py  main_.py  pyproject.toml  requirements.txt  tests.py
common/: bigsurvey_archive.py  config.py  dea_judge.py  doc_arxiv.py  doc_base.py  doc_eval.py  doc_freshwiki.py  doc_latext.py  doc_patent.py  doc_wiki.py  metrics.py  source_enrichment.py  task_dataset.py  test_utils.py  utils.py
common/env/: env.py
data/: wiki_urls.txt
data/bigsurvey/: README.md
data/latex/: AI_Fairness_Beyond_Complete_Demographics_Current_Achievements_and_Future_Directi_arxiv_2511.13525v1.bib  AI_Fairness_Beyond_Complete_Demographics_Current_Achievements_and_Future_Directi_arxiv_2511.13525v1.tex  AVATAAR_Agentic_Video_Answering_via_Temporal_Adaptive_Alignment_and_Reasoning_arxiv_2511.15578v1.bib  AVATAAR_Agentic_Video_Answering_via_Temporal_Adaptive_Alignment_and_Reasoning_arxiv_2511.15578v1.tex  A_Compliance-Preserving_Retrieval_System_for_Aircraft_MRO_Task_Search_arxiv_2511.15383v1.bib  (+177 more)
scripts/: enrich_dea_sources.py  generate_dea_with_sources.py  import_bigsurvey.py  import_multilexsum.py  select_arxiv_latex.py  split_epo_extract.py  step_by_step_demo.ipynb
tests/: test_bigsurvey_archive.py  test_dataset_importers.py  test_dea_judge.py  test_doc_eval_offline.py  test_doc_eval_online.py  test_embedding_models_real.py  test_promptfoo_openwebui_bundle.py  test_source_enrichment.py  test_task_dataset.py  test_utils.py  test_wiki_sources.py
(+2124 files in other folders)
